# cmake-sdl2-template

./: CMakeLists.txt  main.cpp
02_getting_an_image_on_the_screen/: 02_getting_an_image_on_the_screen.cpp
04_key_presses/: 04_key_presses.cpp
31_scrolling_backgrounds/: 31_scrolling_backgrounds.cpp
32_text_input_and_clipboard_handling/: 32_text_input_and_clipboard_handling.cpp
assets/: 01_hello_SDL.cpp  03_event_driven.cpp  04_key_presses.cpp  05_optimized_surface_loading_and_soft_stretching.cpp  07_texture_loading_and_rendering.cpp  08_geometry_rendering.cpp  09_the_viewport.cpp  10_color_keying.cpp  11_clip_rendering_and_sprite_sheets.cpp  12_color_modulation.cpp  13_alpha_blending.cpp  14_animated_sprites_and_vsync.cpp  15_rotation_and_flipping.cpp  16_true_type_fonts.cpp  17_mouse_events.cpp  18_key_states.cpp  19_gamepads_and_joysticks.cpp  20_force_feedback.cpp  21_sound_effects_and_music.cpp  22_timing.cpp  23_advanced_timers.cpp  24_calculating_frame_rate.cpp  25_capping_frame_rate.cpp  26_motion.cpp  27_collision_detection.cpp  28_per-pixel_collision_detection.cpp  29_circular_collision_detection.cpp  30_scrolling.cpp  31_scrolling_backgrounds.cpp  32_text_input_and_clipboard_handling.cpp  33_file_reading_and_writing.cpp  35_window_events.cpp
cmake/: FindSDL2_TTF.cmake  FindSDL2_mixer.cmake
